--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(starwars)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(starwars main.cpp Humanoide.cpp Humanoide.h Princesse.cpp Princesse.h MembreEmpire.cpp MembreEmpire.h Rebel.cpp Rebel.h Barman.cpp Barman.h Alliance.cpp Alliance.h Yoda.cpp Yoda.h)
+add_executable(starwars main.cpp Humanoide.cpp Humanoide.h Princesse.cpp Princesse.h MembreEmpire.cpp MembreEmpire.h Rebel.cpp Rebel.h Barman.cpp Barman.h Alliance.cpp Alliance.h Yoda.cpp Yoda.h Hors_la_loi.h Traitre.cpp Traitre.h)
